Fixed input wrapping issue.

--- a/style.css
+++ b/style.css
@@ -38,7 +38,9 @@ body {
     font-size: 30px;
     width: 350px;
     text-align: right;
-    overflow: auto;
+    overflow-x: auto;
+    overflow-y: hidden;
+    white-space: nowrap;
 }
 
 #input {
@@ -47,7 +49,10 @@ body {
     font-size: 60px;
     width: 350px;
     text-align: right;
-    overflow: auto;
+    overflow-x: auto;
+    overflow-y: hidden;
+    white-space: nowrap;
+
 }
 
 #buttons {
